--- a/README
+++ b/README
@@ -2,4 +2,7 @@
 
 
 ... well, not really a cheatsheet
+... not really a rails app
+
+Standalone HTML page that organizes Git's commands by what they affect.
 
